# lxqt-notificationd

./: CMakeLists.txt  notifyd_fullversion.h.cmake
autostart/: CMakeLists.txt
cmake/: KDEInstallDirs.cmake
config/: CMakeLists.txt  advancedsettings.cpp  advancedsettings.h  basicsettings.cpp  basicsettings.h  main.cpp  mainwindow.cpp  mainwindow.h
src/: CMakeLists.txt  main.cpp  notification.cpp  notificationarea.cpp  notificationlayout.cpp  notificationwidgets.cpp  notifyd.cpp  notifyd.h
